In version 0.3.8:
  BRIEFLY: the documentation system was rewritten plus bugfixes.
  DETAILS:
  - The documentation system was completely rewritten. It now supports
    sub-sections, it supports commenting instances and allows providing
    previews of documented objects.
  - Bugfix: font dialog was not shown.

In version 0.3.7:
  BRIEFLY: improvements to the look & feel of the GUI and bugfixes.
  DETAILS:
  - Bugfix in Dox (documentation of subtypes was not shown);
  - Adjusting size and look of buttons in the GUI plus various other aestetics
    improvements (with great benefit to the Windows port).
  - Making sure the script is always executed from its parent directory.
    This means that saved files will - where not differently specified -
    be saved inside the same directory where the script lives. Similarly,
    image files residing in the same directory can be easily included in the
    current document by using the Image object.

In version 0.3.6:
  BRIEFLY: can include Boxer sources inside other Boxer sources.
  DETAILS:
  - Introducing macros. This allows to control the scope of definition for
    reference points, which - in turns - allows including Boxer sources inside
    other Boxer sources.
  - The file format has been changed to use the macro parser (it is backward
    compatible, though).
  - Getting rid of glade files (Boxer GUI is now entirely defined from Python).
  - Improving the example list with better examples.
  - Fixing the documentation browser to deal correctly with species.

In version 0.3.4 and 0.3.5: trying to get the output view bug sorted.

In version 0.3.3:
  BRIEFLY: bugfixes and small improvements.
  DETAILS:
  - Fixing the Box output view: it did not expand correctly with some versions
    of PyGTK.
  - Small improvements in the documentation browser.

In version 0.3.2:
  BRIEFLY: added a documentation browser for Box.
  DETAILS:
  - A documentation browser was integrated in Boxer. An extra window is opened